--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
         보상액
         <span class="select-container">
           <select id="option-value" class="option-select">
-            <option value="1">1 SBD</option>
-            <option value="3">3 SBD</option>
-            <option value="5" selected>5 SBD</option>
-            <option value="10">10 SBD</option>
-            <option value="100">100 SBD</option>
+            <option value="1">1 SBD 미만</option>
+            <option value="3">3 SBD 미만</option>
+            <option value="5" selected>5 SBD 미만</option>
+            <option value="10">10 SBD 미만</option>
+            <option value="100">100 SBD 미만</option>
           </select>
         </span>
         <span class="spacer">&middot;</span>
