--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <p>짱짱맨을 소개합니다. <a href="https://steemit.com/kr/@virus707/24orv4" target="_blank">보러가기</a>
         <p>보팅 및 댓글 포스팅 방법 : (추가예정), 지원자 : (추가예정)</p> 
         <p>짱짱맨은 누구인가? <a href="https://steemit.com/@virus707" target="_blank">@virus707</a></p>
-        <p>스팀잇 자동 보팅 봇 <a href="https://autovote.recrack.com" target="_blank">보팅하러 가기!!</a></p>
+        <p>스팀잇 자동 보팅 봇 <a href="http://autovote.recrack.com" target="_blank">보팅하러 가기!!</a></p>
       </center>
     </header>
     <hr/>
